# sports-betting-calculator

./: .coverage  .gitignore  =24.0.0  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TEST_GUIDE.md  WARP.md  coverage-badge.json  coverage.xml  mathematical-foundation.md  pyproject.toml  run.py  run_tests.py
.github/: copilot-instructions.md  dependabot.yml
.github/badges/: coverage-badge.json  python-badge.json
.github/workflows/: badges.yml  coverage-badge.yml  test-suite-badges.yml  test-suite.yml
config/: __init__.py  settings.py
data/input/: .gitkeep  NFL Week 3.xlsx  NFL Week 4.xlsx  sample_games.xlsx
data/output/: .gitkeep  NFL Week 3_RESULTS.xlsx  NFL Week 4_RESULTS.xlsx
docs/: README.md  SECURITY.md  TESTING.md
examples/: README.md  basic_usage.py  excel_batch_example.py
scripts/: generate_coverage_badge.py  generate_python_badge.py
src/: __init__.py  betting_framework.py  commission_manager.py  excel_processor.py  main.py
src/config/: settings.py
src/examples/: README.md  __init__.py  basic_usage.py  excel_batch_example.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py  test_excel_workflow.py
tests/property/: __init__.py  test_property_based.py
tests/unit/: __init__.py  test_betting_framework.py  test_commission_manager.py  test_excel_processor.py  test_main.py  test_missing_coverage.py
