
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "sports-betting-calculator"
version = "0.1.0"
description = "Find mispriced event contracts and optimize betting strategies using Kelly Criterion and academic research"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Derek Pearson"},
]
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
]
keywords = [
    "betting",
    "kelly-criterion",
    "event-contracts",
    "academic-research",
    "finance",
    "risk-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Homepage" = "https://github.com/dpearson2699/sports-betting-calculator"
"Bug Reports" = "https://github.com/dpearson2699/sports-betting-calculator/issues"
"Source" = "https://github.com/dpearson2699/sports-betting-calculator"
"Documentation" = "https://github.com/dpearson2699/sports-betting-calculator#readme"

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "flake8>=7.0.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
]





[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  __pycache__
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.bandit]
skips = ["B101"]  # Skip assert_used test

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests for individual functions and classes",
    "integration: Integration tests for component interactions",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",
    "src/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "types-setuptools>=80.9.0.20250822",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
reportMissingImports = true


pythonVersion = "3.13"
pythonPlatform = "All"

executionEnvironments = [
  { root = "src" }
]
